load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/gebn/ipmi/cmd/ping",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/rmcp:go_default_library",
        "//pkg/rmcp/asf:go_default_library",
    ],
)

go_binary(
    name = "ping",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
