load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "packet.go",
        "rmcp.go",
    ],
    importpath = "github.com/gebn/ipmi/pkg/rmcp",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["packet_test.go"],
    embed = [":go_default_library"],
)
